2008-12-11  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.TilePyramidGenerator/Cumberland.TilePyramidGenerator.csproj:
	nothing

	* docs/deploy/cumberland-deploy.doc: update docs

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	sync

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.Data.PostGIS/Cumberland.Data.PostGIS.csproj: sync release
	name

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.MapToKml/Cumberland.MapToKml.csproj: fix release output

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.MapToKml/Main.cs: do arg check

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.DrawMap/AssemblyInfo.cs:
	* Cumberland.MapToKml/AssemblyInfo.cs:
	* Cumberland.Data.PostGIS/AssemblyInfo.cs:
	* Cumberland.Data.SqlServer/AssemblyInfo.cs:
	* Cumberland.TilePyramidGenerator/AssemblyInfo.cs:
	* Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: bump to 0.2

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.TilePyramidGenerator/Main.cs: add
	TileProvider.BleedInPixels

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.TilePyramidGenerator/Main.cs:
	* Cumberland.Data.SqlServer.Loader/README.txt:
	* Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	misc

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs:
	* Cumberland.Data.SqlServer/SqlServerFeatureSource.cs: add GetFeatures
	overloads for labels

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.TilePyramidGenerator/Main.cs: add virtualearth support

2008-11-24  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.MapToKml/Main.cs: support transform

2008-11-24  Scott Ellington  <scott.ellington@gmail.com>

	



2008-11-22  Scott Ellington  <scott.ellington@gmail.com>

	


